# multilayer-perceptron

./: .gitignore  Dockerfile  Dockerfile.mlp  Dockerfile.ollama  Makefile  README.md  cli.py  config.json  docker-compose.yml  evaluation.py  init.sh  main.py  misc_personal_tests.py  mlp.py  pyproject.toml  report.md  requirements.txt  ruff.toml
data/csv/: data_test.csv  data_training.csv  data_with_labels.csv  train.csv  val.csv
data/models/: sigmoid_model.json  sigmoid_model.pkl  softmax_model.json  softmax_model.pkl
mlp/: mlp_service.py
mlp/data_plotter/: plotter.py
mlp/dataset_handler/: data_preprocessing.py
mlp/neural_net/activations/: leaky_relu.py  parametric_relu.py  relu.py  sigmoid.py  softmax.py  tanh.py
mlp/neural_net/callbacks/: callback.py  early_stopping.py
mlp/neural_net/core/: model.py  sequential.py
mlp/neural_net/history/: model_history.py
mlp/neural_net/layers/: dense.py  dropout.py  input.py  layer.py
mlp/neural_net/losses/: binary_cross_entropy.py  categorical_cross_entropy.py  loss.py
mlp/schemas/: csv_labels.py  fit_params.py  packaged_model.py  processed_data.py  sequential_config.py  split_data.py
mlp/utils/: config.py  decorators.py  file_handlers.py  logger.py
src/data_plotter/: plotter.py
src/dataset_handler/: data_preprocessing.py  data_splitter.py
src/model/layers/: dense.py  (+4 more)
src/rag/: crew.py  main.py
src/schemas/: csv_labels.py  fit_params.py  packaged_model.py  processed_data.py  sequential_config.py  split_data.py
src/utils/: config.py  decorators.py  file_handlers.py  logger.py
test_files/: test.pkl
(+59 files in other folders)
