[project]
name = "rag"
version = "0.1.0"
description = "rag using crewAI"
authors = [{ name = "Federico Salazar Lois", email = "fsalazar@42madrid.student.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
rag = "rag.main:run"
run_crew = "rag.main:run"
train = "rag.main:train"
replay = "rag.main:replay"
test = "rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
